# trs

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
print_pdf/: README.md  config.sample.yaml  print_server.py  pyproject.toml  win_print_pdf.py
trs-admin/: Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
trs-admin/app/: app.css  root.tsx  routes.ts
trs-admin/app/components/: AdminNavbar.tsx
trs-admin/app/routes/: appointments.tsx  audit-application.tsx  audit.tsx  dashboard.tsx  next-pdf-to-print.tsx  print-jobs.tsx  view-recent.tsx
trs-db/: .env  .gitignore  docker-compose.yml  index.ts  package-lock.json  package.json  sample.env  schema.prisma
trs-db/migrations/20251028032707_initial_0001/: migration.sql
trs-db/migrations/20251028231319_initial_0001/: migration.sql
trs-db/migrations/20251030031201_audit_appointment_model_0002/: migration.sql
trs-db/migrations/20251031032946_trs_fields/: migration.sql
trs-db/migrations/20251031051102_stuff/: migration.sql
trs-db/migrations/20251031065919_audit_appointment/: migration.sql
trs-db/migrations/20251031185746_additional_fields/: migration.sql
trs-db/migrations/20251031222038_add_total_candy_refund/: migration.sql
turbotreat/: AGENTS.md  Dockerfile  package-lock.json  package.json  questions.xml
turbotreat/app/: app.css  root.tsx  routes.ts
turbotreat/app/components/: multiple-choice.tsx
turbotreat/app/contexts/: ApplicationStateContext.tsx
turbotreat/app/lib/: candy-calculator.ts  db.server.ts  pdf-mapper.ts  pdf.server.ts  state.client.ts  (+2 more)
(+24 files in other folders)
