[project]
name = "print-pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "John McNelly",email = "jkailimcnelly@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywin32 (>=311,<312)",
    "requests (>=2.32.5,<3.0.0)",
    "pyyaml"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
